--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -498,14 +498,14 @@ $responsive-embed-ratios: (
 // 29. Reveal
 // ----------
 
-$reveal-background: $white;
+$reveal-background: rgba(0, 0, 0, .3);
 $reveal-width: 600px;
 $reveal-max-width: $global-width;
 $reveal-padding: $global-padding;
 $reveal-border: 1px solid $medium-gray;
 $reveal-radius: $global-radius;
 $reveal-zindex: 1005;
-$reveal-overlay-background: rgba($black, 0.45);
+$reveal-overlay-background: rgba($black, 0.1);
 
 // 30. Slider
 // ----------
