--- a/scss/app.scss
+++ b/scss/app.scss
@@ -5,47 +5,56 @@
 @import 'motion-ui';
 @import 'styles';
 
-@include foundation-global-styles;
+@include foundation-global-styles; //need global styles
 //@include foundation-grid;
-@include foundation-flex-grid;
-@include foundation-typography;
-@include foundation-button;
-@include foundation-forms;
-@include foundation-range-input;
-@include foundation-accordion;
-@include foundation-accordion-menu;
-@include foundation-badge;
-@include foundation-breadcrumbs;
-@include foundation-button-group;
-@include foundation-callout;
-@include foundation-card;
-@include foundation-close-button;
-@include foundation-menu;
-@include foundation-menu-icon;
-@include foundation-drilldown-menu;
-@include foundation-dropdown;
-@include foundation-dropdown-menu;
-@include foundation-responsive-embed;
-@include foundation-label;
-@include foundation-media-object;
-@include foundation-off-canvas;
-@include foundation-orbit;
-@include foundation-pagination;
-@include foundation-progress-bar;
-@include foundation-progress-element;
-@include foundation-meter-element;
-@include foundation-slider;
-@include foundation-sticky;
-@include foundation-reveal;
-@include foundation-switch;
-@include foundation-table;
-@include foundation-tabs;
-@include foundation-thumbnail;
-@include foundation-title-bar;
-@include foundation-tooltip;
-@include foundation-top-bar;
-@include foundation-visibility-classes;
-@include foundation-float-classes;
-@include foundation-flex-classes;
-@include motion-ui-transitions;
-@include motion-ui-animations;
+@include foundation-flex-grid; //using flex grid
+@include foundation-typography; // using typography styles
+@include foundation-button; //using button in form
+@include foundation-forms; //using form for contact
+// @include foundation-range-input;
+// @include foundation-accordion;
+// @include foundation-accordion-menu;
+// @include foundation-badge;
+// @include foundation-breadcrumbs;
+// @include foundation-button-group;
+// @include foundation-callout;
+// @include foundation-card;
+@include foundation-close-button; // close button on modal
+@include foundation-menu; //menu
+@include foundation-menu-icon; //responsive menu
+// @include foundation-drilldown-menu;
+// @include foundation-dropdown;
+// @include foundation-dropdown-menu;
+// @include foundation-responsive-embed;
+// @include foundation-label;
+// @include foundation-media-object;
+// @include foundation-off-canvas;
+// @include foundation-orbit;
+// @include foundation-pagination;
+// @include foundation-progress-bar;
+// @include foundation-progress-element;
+// @include foundation-meter-element;
+// @include foundation-slider;
+@include foundation-sticky; //sticky menu
+@include foundation-reveal; //modal
+// @include foundation-switch;
+// @include foundation-table;
+// @include foundation-tabs;
+// @include foundation-thumbnail;
+//@include foundation-title-bar;
+// @include foundation-tooltip;
+@include foundation-top-bar; //menu uses top bar
+//@include foundation-visibility-classes;
+//@include foundation-float-classes;
+@include foundation-flex-classes; //modal back and next use flex classes
+// @include motion-ui-transitions;
+// @include motion-ui-animations;
+
+/*Important*/
+html.is-reveal-open, html.is-reveal-open body {
+	position: static;
+  overflow: visible;
+}
+body.is-reveal-open {
+	overflow: visible;
+}
